Added time command, ps-test. Updated testids. Cleaned up ps.c, sysproc.c, and proc.c for delivery.

--- a/xv6-pdx/Makefile
+++ b/xv6-pdx/Makefile
@@ -17,8 +17,8 @@ endif
 
 ifeq ($(CS333_PROJECT), 2)
 CS333_CFLAGS += -DCS333_P1 -DUSE_BUILTINS -DCS333_P2
-CS333_UPROGS += _date _time _ps _testids
-CS333_TPROGS += 
+CS333_UPROGS += _date _time _ps
+CS333_TPROGS += _testids _ps-test
 endif
 
 ifeq ($(CS333_PROJECT), $(filter $(CS333_PROJECT), 3 4))
