Fixed sys_setpriority(). Added another test program, tPrio. Adjusted Budget and Promotion Time for testing.

--- a/xv6-pdx/Makefile
+++ b/xv6-pdx/Makefile
@@ -24,7 +24,7 @@ endif
 ifeq ($(CS333_PROJECT), $(filter $(CS333_PROJECT), 3 4))
 CS333_CFLAGS += -DCS333_P1 -DUSE_BUILTINS -DCS333_P2 -DCS333_P3P4
 CS333_UPROGS += _date _time _ps
-CS333_TPROGS += _zFree _p4test
+CS333_TPROGS += _zFree _p4test _p4test2 _tPrio
 endif
 
 ifeq ($(CS333_PROJECT), 5)
